cli/tests/default/e2e/snapshots/test_rule_validation/test_validation_of_invalid_rules/rulesinvalid-rulesstring-pattern-under-patterns.yaml/results.txt
Configuration is invalid - found 1 configuration error(s), and 0 rule(s).
[ERROR] Rule parse error in rule eqeq:
 Strings are not valid under `patterns`: did you mean to write `pattern: foo` instead?
  --> rules/invalid-rules/string-pattern-under-patterns.yaml:4
   2 | - id: eqeq
   3 |   patterns:
   4 |     - "foo"
     |     ^
   5 |   message: |
   6 |     You can't use string literals as patterns in old-style rules!
